recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:4: error: too many arguments for method carr?: ()Unit
  carr?(90)
       ^FourSquare:7: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite()
        ^