recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  carr?()
  droite(90)
  carr?(90)
  droite(90)
  carr?()
  droite()
  carr?()              
                    
}



def carr?(){
  avance(100)
  droite(90)
  avance(100)
  droite(90)
  avance(100)
  droite(90)
  avance(100)
  
}